tdf#115557 DOCX import: don't multiply charts in footnotes

A chart in a footnote was appeared in every footnotes,
resulting fatal problems during a few import/export cycles,
see tdf#115558 (MSO is unable to open the DOCX export
with multiplied objects).

Change-Id: Ib729e4442ed3c92e4646fa7cdf7253a963d883e8
Reviewed-on: https://gerrit.libreoffice.org/73025
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>